--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Shade Plugin to create a fat JAR -->
+            <!-- Maven Shade Plugin to create a fat JAR with Main-Class -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -48,6 +48,14 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <transformers>
+                                <!-- Add the Main-Class attribute to the manifest -->
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>com.example.vulnerableapp.App</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
